# llm-rust

./: .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yaml
.github/workflows/: ci.yaml  docs.yaml
hack/: check-integration.sh  generate-doc.sh  lint.sh
libs/resources/rs-minio/: Cargo.toml
libs/resources/rs-minio/src/: lib.rs
libs/resources/rs-minio/tests/: integration_test.rs
libs/resources/rs-rabbitmq/: Cargo.toml
libs/resources/rs-rabbitmq/src/: connection_manager.rs  lib.rs  message_publisher.rs
libs/resources/rs-rabbitmq/tests/: connection_manager_integration_test.rs  message_publisher_integraion_test.rs
