[package]
name = "rs_minio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
minio = "0.1.0"
tempfile = "3.3.0"
bytes = "1"
log = "0.4"
env_logger = "0.11.3"
anyhow = "1"

[dev-dependencies]
uuid = { version = "1.1", features = ["v4"] }